--- a/Cerradura/Cerradura/Settings.bundle/Root.plist
+++ b/Cerradura/Cerradura/Settings.bundle/Root.plist
@@ -8,6 +8,12 @@
 	<array>
 		<dict>
 			<key>Type</key>
+			<string>PSGroupSpecifier</string>
+			<key>Title</key>
+			<string>Server Settings</string>
+		</dict>
+		<dict>
+			<key>Type</key>
 			<string>PSTextFieldSpecifier</string>
 			<key>Title</key>
 			<string>Server URL</string>
