working on Login

--- a/CoreCerradura/CoreCerradura.xcodeproj/xcshareddata/xcschemes/CoreCerradura OS X.xcscheme
+++ b/CoreCerradura/CoreCerradura.xcodeproj/xcshareddata/xcschemes/CoreCerradura OS X.xcscheme
@@ -9,9 +9,9 @@
          <BuildActionEntry
             buildForTesting = "YES"
             buildForRunning = "YES"
-            buildForProfiling = "YES"
+            buildForProfiling = "NO"
             buildForArchiving = "YES"
-            buildForAnalyzing = "YES">
+            buildForAnalyzing = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "6E4642ED1AD9E045005BDBA7"
