added fix for MOMC (for OS X)
Wont compile Core Data model if entity is named Permission

--- a/CoreCerradura/CoreCerradura.xcodeproj/xcshareddata/xcschemes/CoreCerradura iOS.xcscheme
+++ b/CoreCerradura/CoreCerradura.xcodeproj/xcshareddata/xcschemes/CoreCerradura iOS.xcscheme
@@ -7,11 +7,11 @@
       buildImplicitDependencies = "YES">
       <BuildActionEntries>
          <BuildActionEntry
-            buildForTesting = "YES"
+            buildForTesting = "NO"
             buildForRunning = "YES"
-            buildForProfiling = "YES"
+            buildForProfiling = "NO"
             buildForArchiving = "YES"
-            buildForAnalyzing = "YES">
+            buildForAnalyzing = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "6E95D1FC1B2B2EBD000DD4DA"
@@ -29,6 +29,15 @@
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
       </Testables>
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "6E95D1FC1B2B2EBD000DD4DA"
+            BuildableName = "CoreCerradura.framework"
+            BlueprintName = "CoreCerradura iOS"
+            ReferencedContainer = "container:CoreCerradura.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </TestAction>
@@ -60,15 +69,6 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "6E95D1FC1B2B2EBD000DD4DA"
-            BuildableName = "CoreCerradura.framework"
-            BlueprintName = "CoreCerradura iOS"
-            ReferencedContainer = "container:CoreCerradura.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
